# Ak8064_TEST

install/: local_setup.sh  setup.sh
install/can_interface/include/can_interface/: caninterface.hpp
install/can_interface/share/can_interface/: local_setup.sh  package.sh
install/can_interface/share/can_interface/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  can_interfaceConfig.cmake  export_can_interfaceExport-noconfig.cmake
install/motor_driver/lib/motor_driver/: ControlMotor  RPMTest  SetOMotor  Test  TestMes  TurnOn.sh  motor_control_node  motor_test_node  set_params_gui.py
install/motor_driver/share/ament_index/resource_index/parent_prefix_path/: motor_driver
install/motor_driver/share/motor_driver/: local_setup.sh  package.sh  package.xml
install/motor_driver/share/motor_driver/config/: exercise1_params.yaml  setup.yaml
log/: latest_build
src/can_interface/: CMakeLists.txt  package.xml
src/can_interface/src/: caninterface.cpp
src/motor_driver/: CMakeLists.txt  README.md
src/motor_driver/GUI/: GUI_TEST.py  set_params_gui.py
src/motor_driver/config/: exercise1_params.yaml  exercise2_params.yaml
src/motor_driver/launch/: motor_control.launch.py  motor_test_launch.py
src/motor_driver/scripts/: TurnOn.sh
src/motor_driver/src/: 22_5_Test.cpp  ControlMotor.cpp  RPMTest.cpp  SetOMotor.cpp  TestMes.cpp  mit_control_test.cpp  motor_control_node.cpp  motor_test_node.cpp
